--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,10 @@ a {
     color-scheme: dark;
   }
 }
+
+.button {
+  display: inline-block;
+  padding: 8px;
+  margin: 8px;
+  border: 1px solid;
+}
